--- a/source/星铁/2.4.toml
+++ b/source/星铁/2.4.toml
@@ -7,27 +7,55 @@ wish_name = "活动跃迁"
 [[wish]]
 type = "角色"
 name = "「掷山破云」、「令奉贞凶」"
-start = 2024-08-28T11:00:00
-end = 2024-09-17T17:59:59
+start = 2024-07-31T06:00:00
+end = 2024-08-21T11:59:59
 describe = "活动期间，限定5星角色「云璃（毁灭•物理）」，4星角色「寒鸦（同谐•物理）」「驭空（同谐•虚数）」「玲可（丰饶•量子）」跃迁成功概率限时提升。"
 
 [[wish]]
-type = "武器"
-name = "「法器·冲浪时光」&「单手剑·苍古自由之誓」"
-start = 2024-08-28T11:00:00
-end = 2024-09-17T17:59:59
-describe = "「法器·冲浪时光」&「单手剑·苍古自由之誓」"
+type = "光锥"
+name = "「流光定影」、「溯回忆象」"
+start = 2024-07-31T06:00:00
+end = 2024-08-21T11:59:59
+describe = "活动期间，限定5星光锥「落日时起舞（毁灭）」，4星光锥「鼹鼠党欢迎你（毁灭）」「此时恰好（丰饶）」「『我』的诞生（智识）」跃迁成功概率限时提升。"
 
 [[wish]]
 type = "角色"
-name = "「巡火猎秘」&「影寂天下人」"
-start = 2024-09-17T18:00:00
-end = 2024-10-08T14:59:59
-describe = "基尼奇&雷电将军"
+name = "「鼎中捭阖」、「焰锦游鱼」"
+start = 2024-08-21T12:00:00
+end = 2024-09-09T15:00:00
+describe = "活动期间，限定5星角色「椒丘（虚无•火）」，「花火（同谐•量子）」，4星角色「虎克（毁灭•火）」「桂乃芬（虚无•火）」「阿兰（毁灭•雷）」跃迁成功概率限时提升。"
 
 [[wish]]
-type = "武器"
-name = "「双手剑·山王长牙」&「长柄武器·薙草之稻光」"
-start = 2024-09-17T18:00:00
-end = 2024-10-08T14:59:59
-describe = "「双手剑·山王长牙」&「长柄武器·薙草之稻光」"
+type = "光锥"
+name = "「流光定影」、「溯回忆象」"
+start = 2024-08-21T12:00:00
+end = 2024-09-09T15:00:00
+describe = "活动期间，限定5星光锥「那无数个春天（虚无）」，「游戏尘寰（同谐）」，4星光锥「芳华待灼（同谐）」「猎物的视线（虚无）」「秘密誓心（毁灭）」跃迁成功概率限时提升。"
+
+[[event]]
+type = "活动"
+name = "「日抛忆质留影计划」：拍摄照片达成目标，获取命运的足迹等奖励"
+start = 2024-08-07T12:00:00
+end   = 2024-08-19T03:59:59
+describe = "来自匹诺康尼的见习医生正在星槎海招募一位助手，来协助他完成一项特别的拍摄计划。"
+
+[[event]]
+type = "活动"
+name = "「位面分裂」活动：位面饰品限时双倍掉落"
+start = 2024-08-14T04:00:00
+end   = 2024-08-21T03:59:59
+describe = "「位面分裂」活动期间，挑战「模拟宇宙」或「差分宇宙」时，可获得双倍奖励。"
+
+[[event]]
+type = "活动"
+name = "「开拓，友谊魔法！」：完成桶的试炼，获取命运的足迹等奖励"
+start = 2024-08-21T12:00:00
+end   = 2024-09-09T03:59:59
+describe = "曾在梦中相会的灰色朋友只身来到贝洛伯格的现实世界，他前来解决一桩不明黑影袭击居民的危机，但急需你与伙伴们的帮助……"
+
+[[event]]
+type = "活动"
+name = "「花藏繁生」活动：拟造花萼限时双倍掉落"
+start = 2024-08-30T04:00:00
+end   = 2024-09-06T03:59:59
+describe = "「花藏繁生」活动期间，挑战并通关「拟造花萼（金）」或「拟造花萼（赤）」时，可获得双倍奖励。"
