--- a/source/绝区零/1.5.toml
+++ b/source/绝区零/1.5.toml
@@ -18,6 +18,20 @@ start = 2025-01-22T06:00:00
 end = 2025-02-12T11:59:59
 describe = "[玲珑妆匣(支援)]、[深海访客(强攻)]、[德玛拉电池Ⅱ型(击破)]、[家政员(强攻)]"
 
+[[wish]]
+type = "代理人"
+name = "「光与影的纱网」「青如玉壶冰」"
+start = 2025-02-12T12:00:00
+end = 2025-03-11T14:59:59
+describe = "[伊芙琳(强攻 · 火)]、[青衣(击破 · 电)]、[安东(强攻 · 电)]、[妮可(支援 · 以太)]"
+
+[[wish]]
+type = "音频"
+name = "「喧哗奏鸣」「灿烂和声」"
+start = 2025-02-12T12:00:00
+end = 2025-03-11T14:59:59
+describe = "[心弦夜响(强攻)]、[玉壶青冰(击破)]、[旋钻机-赤轴(强攻)]、[聚宝箱(支援)]"
+
 [[event]]
 type = "活动"
 name = "「协律共契」活动"
@@ -80,5 +94,12 @@ name = "「先遣赏金-定期清剿」活动"
 start = 2025-02-07T04:00:00
 end = 2025-02-12T03:59:59
 describe = "「先遣赏金-定期清剿」活动期间，绳匠进入「定期清剿」，挑战并通过任意关卡即可获得双倍奖励！"
+
+[[event]]
+type = "活动"
+name = "「『嗯呢』从天降」活动"
+start = 2025-02-12T10:00:00
+end = 2025-03-11T03:59:59
+describe = "「『嗯呢』从天降」活动期间，累计登录7天即可获得[邦布券]*10！"
 
 
