--- a/source/星铁/3.0.toml
+++ b/source/星铁/3.0.toml
@@ -81,6 +81,14 @@ start = 2025-02-03T12:00:00
 end   = 2025-02-24T03:59:59
 describe = "本次活动中，共有5处卷轴，对应5个战斗关卡。需要开拓者在不同的场景中找到对应的卷轴，进入战斗后击败故事中的对手。"
 
+[[event]]
+type = "活动"
+name = "「花藏繁生」活动：拟造花萼限时双倍掉落"
+start = 2025-02-14T04:00:00
+end   = 2025-02-21T03:59:59
+describe = "「花藏繁生」活动期间，挑战并通关「拟造花萼（金）」或「拟造花萼（赤）」时，可获得双倍奖励。"
+
+
 
 
 
