--- a/source/星铁/3.1.toml
+++ b/source/星铁/3.1.toml
@@ -1,6 +1,34 @@
 name = "门扉之启，王座之终"
 version = "3.1"
 special_program = 2025-02-14T19:30:00
-#update_time = 2025-02-26T06:00:00
+update_time = 2025-02-26T06:00:00
 wish_name = "活动跃迁"
+
+[[wish]]
+type = "角色"
+name = "「径复原初」「掷山破云」"
+start = 2025-02-26T11:00:00
+end = 2025-03-19T11:59:59
+describe = "「缇宝（同谐•量子）」「云璃（毁灭•物理）」"
+
+[[wish]]
+type = "光锥"
+name = "「流光定影」「溯回忆象」"
+start = 2025-02-26T11:00:00
+end = 2025-03-19T11:59:59
+describe = "「如果时间是一朵花（同谐）」「落日时起舞（毁灭）」"
+
+[[wish]]
+type = "角色"
+name = "「血炬狮心」「令奉贞凶」"
+start = 2025-03-19T12:00:00
+end = 2025-04-08T15:00:00
+describe = "「万敌（毁灭•虚数）」「藿蕾（丰饶•风）」"
+
+[[wish]]
+type = "光锥"
+name = "「流光定影」「湖回忆象」"
+start = 2025-03-19T12:00:00
+end = 2025-04-08T15:00:00
+describe = "「血火啊，燃烧前路（毁灭）」「惊魂夜（丰饶）」"
 
