--- a/source/绝区零/1.5.toml
+++ b/source/绝区零/1.5.toml
@@ -102,4 +102,17 @@ start = 2025-02-12T10:00:00
 end = 2025-03-11T03:59:59
 describe = "「『嗯呢』从天降」活动期间，累计登录7天即可获得[邦布券]*10！"
 
+[[event]]
+type = "活动"
+name = "「厄匹斯极钓大师赛」活动"
+start = 2025-02-14T10:00:00
+end = 2025-03-10T03:59:59
+describe = "完成活动期间的限时奖励任务，即可获得活动专属奖励[动态壁纸·邦布钓友会]、[调律校音器]、[菲林]和各类养成材料奖励。"
+
+[[event]]
+type = "活动"
+name = "「零号空洞：灾兆肃尽」活动"
+start = 2025-02-17T10:00:00
+end = 2025-03-03T03:59:59
+describe = "活动期间，可参与全新玩法「祸首歼灭战」，为代理人配备独特的武备、鸣徽以及「战术强化」，攻克强敌。完成关卡挑战并达到指定评级，即可获得[菲林]和各类养成材料奖励。"
 
