--- a/source/绝区零/1.5.toml
+++ b/source/绝区零/1.5.toml
@@ -116,3 +116,10 @@ start = 2025-02-17T10:00:00
 end = 2025-03-03T03:59:59
 describe = "活动期间，可参与全新玩法「祸首歼灭战」，为代理人配备独特的武备、鸣徽以及「战术强化」，攻克强敌。完成关卡挑战并达到指定评级，即可获得[菲林]和各类养成材料奖励。"
 
+[[event]]
+type = "活动"
+name = "「本日推荐影片」活动"
+start = 2025-02-21T10:00:00
+end = 2025-03-03T03:59:59
+describe = "活动期间，绳匠可以前往热望角的「Random Play」宣传摊位，找到赫蒂，开启录像带宣传。"
+
