--- a/source/绝区零/1.5.toml
+++ b/source/绝区零/1.5.toml
@@ -123,3 +123,10 @@ start = 2025-02-21T10:00:00
 end = 2025-03-03T03:59:59
 describe = "活动期间，绳匠可以前往热望角的「Random Play」宣传摊位，找到赫蒂，开启录像带宣传。"
 
+[[event]]
+type = "活动"
+name = "「『141』环保计划」活动"
+start = 2025-02-26T10:00:00
+end = 2025-03-10T03:59:59
+describe = "活动期间，绳匠每日首次消耗电量，可以获得[废弃电池]；把[废弃电池]交给丝琪，即可兑换[菲林]、[邦布券]和各类养成材料奖励。"
+
